--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -363,7 +363,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #f0f0f0;
+        background-color: #f6f1f1;
         padding: 20px;
     }
 
@@ -390,9 +390,19 @@
 
 
 
+
+
+
+
+
 </style>
 <body>
 <header>
+
+
+
+
+
     <nav class="navMain" >
         <ul>
             <li><a href="#">Home</a></li>
@@ -407,7 +417,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1 class="welcome-to-myport">Vadim Kharovyuk</h1>
-            <p class="mainP">Легкость, грация, мастерство: в каждом движении – искусство!</p>
+            <p class="mainP">Легкість, грація, майстерність: в кожному русі – мистецтво!</p>
             <a href="#aboutme" class="cta">View My Work</a>
         </div>
 <!--        <div class="hero-image">-->
@@ -424,7 +434,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Привет! Я Вадим, профессиональный воздушный гимнаст с опытом работы более 8 лет. Моя страсть к гимнастике привела меня в удивительные места по всему миру, включая Китай, Турцию и ОАЭ. За годы практики я усвоил множество стилей и техник, что позволяет мне создавать уникальные выступления, полные грации и красоты.</p>
+                <p>Привіт! Я Вадим, професійний повітряний гімнаст з більш ніж 8-річним досвідом роботи. Моя пристрасть до гімнастики привела мене в дивовижні місця по всьому світу, включаючи Китай, Туреччину та ОАЕ. Протягом років практики я вивчив безліч стилів та технік, що дозволяє мені створювати унікальні виступи, повні грації та краси.</p>
                 <p>Hello! I'm Vadim, a professional trapeze artist with more than 8 years of experience. My passion for gymnastics has taken me to amazing places around the world including China, Turkey and the UAE. Over the years of practice, I have mastered many styles and techniques, allowing me to create unique performances full of grace and beauty.</p>
             </div>
             <div class="about-image">
@@ -469,39 +479,39 @@
             <div class="portfolio-item">
                 <img src="/static/circle.JPG" alt="Project 1">
                 <h3>Китай 2015-2016</h3>
-                <p>В 2015–2016 годах я имел уникальную возможность поработать в Китае в цирковом представлении. Это был удивительный опыт, полный испытаний и новых открытий. В этом захватывающем мире я смог применить свои навыки воздушного гимнаста и создать выступления, которые захватывали дух зрителей. Работа в Китае дала мне ценный опыт работы в международной команде и позволила расширить свой профессиональный кругозор. Этот период останется незабываемым в моей карьере, и я благодарен за возможность погрузиться в культуру и творческую энергию Китая. </p>
-                <a href="https://www.youtube.com/watch?v=SBgQyhJwQnA&t=149s" class="portfolio-link">View Project</a>
+                <p>У 2015–2016 роках я мав унікальну можливість працювати в Китаї у цирковому виставі. Це був дивовижний досвід, повний випробувань та нових відкриттів. У цьому захоплюючому світі я зміг використати свої навички повітряного гімнаста та створити виступи, які захоплювали дух глядачів. Робота в Китаї надала мені цінний досвід роботи у міжнародній команді та дозволила розширити мої професійні знання. Цей період залишиться незабутнім у моїй кар'єрі, і я вдячний за можливість зануритися у культуру та творчу енергію Китаю. </p>
+                <a href="https://www.youtube.com/watch?v=SBgQyhJwQnA&t=149s" class="portfolio-link">View Show</a>
             </div>
             <div class="portfolio-item">
                 <img src="/static/prof111.JPG" alt="Project 2">
                 <h3>Китай 2016-2017</h3>
-                <p>В 2015–2016 годах я был частью уникального театрального проекта в Китае. Этот период ознаменовался для меня невероятным творческим ростом и профессиональным развитием. Работа в китайском театре дала мне ценный опыт сотрудничества с местными артистами и режиссерами, а также позволила расширить мои горизонты в области сценического искусства. Благодаря этой работе я смог углубиться в культуру Китая и научиться новым методам творчества. Этот опыт стал для меня настоящим вызовом, который помог мне стать лучшим профессионалом и открыть для себя новые горизонты в мире театрального искусства.</p>
+                <p>У 2015–2016 роках я був частиною унікального театрального проекту в Китаї. Цей період був для мене неймовірним творчим зростанням і професійним розвитком. Робота в китайському театрі дала мені цінний досвід співпраці з місцевими артистами та режисерами, а також дозволила розширити мої горизонти в області сценічного мистецтва. Завдяки цій роботі я зміг поглибити знання про культуру Китаю та вивчити нові методи творчості. Цей досвід став для мене справжнім викликом, який допоміг мені стати кращим професіоналом і відкрити для себе нові горизонти в світі театрального мистецтва.</p>
                 <a href="https://www.youtube.com/watch?v=kBCr0VJm4o8" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
                 <img src="/static/port333.JPG" alt="Project 3">
                 <h3>Китай 2017-2018</h3>
-                <p>В период с 2017 по 2018 годы я имел уникальную возможность работать в Китае в цирковом представлении. Это был захватывающий период в моей карьере, полный ярких впечатлений и творческих достижений. В цирке я обучался и работал над различными акробатическими номерами, участвовал в создании и реализации разнообразных хореографических постановок. Этот опыт помог мне улучшить свои навыки воздушного гимнаста и расширить арсенал трюков и выступлений. Работа в китайском цирке также дала мне возможность познакомиться с уникальной культурой и традициями этой страны, что вдохновило меня на создание новых и захватывающих выступлений.</p>
+                <p>У період з 2017 по 2018 роки я мав унікальну можливість працювати в Китаї в цирковому виступі. Це був захоплюючий період у моїй кар'єрі, повний яскравих вражень і творчих досягнень. В цирку я навчався і працював над різними акробатичними номерами, брав участь у створенні та втіленні різноманітних хореографічних вставок. Цей досвід допоміг мені покращити свої навички воздушного гімнаста і розширити арсенал трюків та виступів. Робота в китайському цирку також дала мені можливість ознайомитися з унікальною культурою та традиціями цієї країни, що надихнуло мене на створення нових та захопливих вистав.</p>
                 <a href="https://www.youtube.com/watch?v=b-XltBFb74I" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
                 <img src="/static/port123.JPG" alt="Project 4">
                 <h3>Китай 2018-2019</h3>
-                <p>В период с 2018 по 2019 годы я присоединился к команде ночного клуба "Oscar" в Китае, где продолжил свою творческую деятельность в качестве воздушного гимнаста. Работа в ночном клубе была увлекательным опытом, который дал мне возможность не только продемонстрировать свое мастерство и талант на новой сцене, но и расширить свой художественный арсенал. В "Oscar" я участвовал в создании уникальных номеров, которые сочетали в себе высокий уровень акробатики, элегантность и харизму. Работа в ночном клубе предоставила мне ценный опыт взаимодействия с аудиторией различных культур и национальностей, что обогатило мой творческий путь и вдохновило на новые творческие идеи.</p>
+                <p>У період з 2018 по 2019 роки я приєднався до команди нічного клубу "Oscar" в Китаї, де продовжив свою творчу діяльність як воздушний гімнаст. Робота в нічному клубі була захоплюючим досвідом, який дав мені можливість не лише продемонструвати своє майстерство та талант на новій сцені, а й розширити свій художній арсенал. У "Oscar" я брав участь у створенні унікальних номерів, які поєднували в собі високий рівень акробатики, елегантність та харизму. Робота в нічному клубі надала мені цінний досвід взаємодії з аудиторією різних культур та національностей, що збагатило мій творчий шлях і надихнуло на нові творчі ідеї.</p>
                 <a href="https://www.youtube.com/watch?v=e1WU4-81VEY" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
                 <img src="/static/oscarDou.JPG" alt="Project 5">
                 <h3>Турция 2020-2022</h3>
-                <p>В период с 2020 по 2022 годы я работал в Турции, где продолжал свою карьеру воздушного гимнаста. Этот период был для меня значимым, так как Турция предоставила мне новые возможности для развития и самовыражения.Работа в Турции подарила мне незабываемые впечатления и опыт, расширив горизонты моего творчества и позволив воплотить в жизнь новые идеи и концепции в выступлениях. Я был частью команды профессионалов, с которыми удалось создать захватывающие и запоминающиеся номера, покорившие сердца зрителей. Работа в Турции стала для меня важным этапом в моей карьере, который помог мне вырасти как артисту и раскрыть свой творческий потенциал.</p>
+                <p>У період з 2020 по 2022 роки я працював у Туреччині, де продовжив свою кар'єру воздушного гімнаста. Цей період був для мене значущим, оскільки Туреччина надала мені нові можливості для розвитку та самовираження. Робота в Туреччині подарувала мені незабутні враження і досвід, розширивши горизонти мого творчого росту та дозволивши втілити в життя нові ідеї і концепції в виступах. Я був частиною команди професіоналів, з якими вдалося створити захоплюючі та запам'ятовуючі номери, завоювавши серця глядачів. Робота в Туреччині стала для мене важливим етапом у моїй кар'єрі, що допомогло мені вирости як артисту та розкрити свій творчий потенціал.</p>
                 <a href="https://www.youtube.com/watch?v=5PEGOo0mizk" class="portfolio-link">View Project</a>
             </div>
             <div class="portfolio-item">
                 <img src="/static/port60.JPG" alt="Project 6">
                 <h3>Дубай 2022-2023</h3>
-                <p>В период с 2022 по 2023 годы я работал в Дубае, где продолжал свою карьеру в качестве воздушного гимнаста. Работа в этом мировом центре развлечений была для меня вдохновляющим и захватывающим опытом. В Дубае я принимал участие в выступлениях в престижных развлекательных комплексах, где мог демонстрировать свои навыки перед многочисленной аудиторией из разных стран мира.
+                <p>У період з 2022 по 2023 роки я працював у Дубаї, де продовжив свою кар'єру в якості воздушного гімнаста. Робота в цьому світовому центрі розваг була для мене натхненним та захоплюючим досвідом. У Дубаї я брав участь у виступах у престижних розважальних комплексах, де міг демонструвати свої навички перед великою аудиторією з різних країн світу.
 
-                    Мое участие в шоу в Дубае позволило мне встретиться и поработать с лучшими артистами и профессионалами индустрии развлечений. Мы создавали захватывающие выступления, которые не только развлекали зрителей, но и вдохновляли их на новые высоты. Этот опыт стал для меня ценным шагом в развитии моей карьеры и позволил мне расширить свои горизонты как артиста.</p>
+                    Моя участь у шоу в Дубаї дозволила мені зустрітися та працювати з найкращими артистами та професіоналами розважальної індустрії. Ми створювали захоплюючі вистави, які не лише розважали глядачів, але й надихали їх на нові висоти. Цей досвід став для мене цінним кроком у розвитку моєї кар'єри і дозволив розширити свої горизонти як артиста.</p>
                 <a href="https://www.youtube.com/watch?v=EivS1-tbVmo" class="portfolio-link">View Project</a>
             </div>
         </div>
@@ -511,8 +521,8 @@
 
     <section class="parallax-section" id="parallax">
         <div class="parallax-content">
-            <h2>Пластика, страсть, профессионализм: в каждом акте – неповторимость!</h2>
-            <p>Его движения исполнены изящества и энергии, олицетворяя страсть к своему искусству. </p>
+            <h2>Пластика, пристрасть, професіоналізм: у кожному виступі - унікальність!</h2>
+            <p>Його рухи виблискують витонченість і енергію, втілюючи пристрасть до свого мистецтва. </p>
         </div>
     </section>
 
@@ -526,6 +536,14 @@
 <!--        </button>-->
 
 <!--    </section>-->
+
+
+
+
+
+
+
+
 
 
 
@@ -552,10 +570,6 @@
 
 
 
-
-
-
-
 </main>
 
 <footer class="footer">
@@ -566,6 +580,8 @@
 
     <p>&copy; 2022-2024 Portfolio. All rights reserved.</p>
 </footer>
+
+
 
 <script>
     window.addEventListener('scroll', function() {
