@media screen and (max-width: 768px)

--- a/My.css
+++ b/My.css
@@ -309,3 +309,9 @@ button i {
         width: calc(50% - 10px); /* Ширина каждого поста (по 2 поста в ряд) на меньших экранах */
     }
 }
+@media screen and (max-width: 768px) {
+    img {
+        max-width: 100%; /* Изображение будет занимать всю доступную ширину на меньших экранах */
+        height: auto; /* Автоматически подстраивает высоту под измененную ширину */
+    }
+}
